package com.inicio.aprendizaje.tren;

public enum ClaseSilla {
    ECONOMICA,
    EJECUTIVA
}
