package com.inicio.aprendizaje.tren;

public enum PosicionSilla {
    VENTANA,
    CENTRO,
    PASILLO
}
